# easycat

./: .gitignore  README.md  pyproject.toml  setup.py
easycat/: __init__.py
easycat/download/: __init__.py  sdssdata.py  wisedata.py  ztfdata.py
easycat/download/core/: __init__.py
easycat/sf/: core.py
easycat/subcat2d/: __init__.py  grid.py  polygon.py
examples/: download_wiselc.py  simple_parallel.ipynb  wise_lightcurve.ipynb
examples/jhwu2025_MIRCV/: config_jhwu.py  download.py  notebook.ipynb  reprocess.py
examples/lightcurve/: notebook.ipynb
python/easycat/: __init__.py
python/easycat/astro_xray/: __init__.py  simple_grppha.py
python/easycat/astrotools/: __init__.py  astrofilter.py  core.py
python/easycat/cmd/: simple_grppha.py
python/easycat/download/: __init__.py  panstarrs.py  sdssdata.py  wisedata.py  ztfdata.py
python/easycat/lightcurve/: __init__.py
python/easycat/parallel/: __init__.py  core.py  core2.py
python/easycat/sayhello/: __init__.py
python/easycat/stats/: __init__.py
python/easycat/subcat2d/: __init__.py  grid.py  grid2.py  polygon.py
python/easycat/util/: __init__.py  dbscan.py  table_task.py
python/tests/astro_xray/: test_behr.py
python/tests/data/: 9626-57875-0685.fits  wise_criteria_basic_corr1.csv  wise_criteria_basic_test1.csv
python/tests/lightcurve/: test_plot.py  test_reprocess.py  test_sf.py  test_util.py
python/tests/parallel/: test_parallel.py
rust/sayhello-rs/: Cargo.toml
rust/sf-rs/: Cargo.toml
rust/sf-rs/src/: lib.rs
rust/structure-function-rs/: Cargo.toml
scripts/: install.sh
(+22 files in other folders)
